# CashFlow

./: LICENSE  README.md  pyproject.toml  run.py
cashflow/: __init__.py  engine.py  scoreboard.py
tests/: test_game.py
