[project]
name = "cashflow"
version = "0.1.0"
description = "A simple game engine for a Cashflow-style board game"
authors = [{name = "CashFlow Authors", email = "example@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["pytest"]
